# text_to_sql_agent

./: .env.example  README.md  pyproject.toml
.github/workflows/: main.yml
data/: 30_times.txt  dataset_1.txt
scripts/: populate_db.py
src/: frontend.py
